--- a/styles/search.scss
+++ b/styles/search.scss
@@ -77,6 +77,7 @@ body{
                 input[type=text]{
                     width: 280px;
                     padding: 0px;
+                    font-size: 16px;
                 }
                 i{
                     font-size: 22px;
@@ -122,6 +123,10 @@ body{
                 width: 320px;
                 input[type=text]{
                     width: 240px;
+                    font-size: 14px;
+                }
+                i{
+                    font-size: 18px;
                 }
             }
         }
@@ -141,6 +146,9 @@ body{
                 width: 320px;
                 input[type=text]{
                     width: 240px;
+                }
+                i{
+                    font-size: 15px;
                 }
             }
         }
