--- a/styles/index.css
+++ b/styles/index.css
@@ -22,7 +22,7 @@ body {
       display: table;
       width: 100%; }
       body .content .top-nav .left {
-        width: 15%;
+        width: 20%;
         float: left;
         padding: 30px; }
         body .content .top-nav .left img {
@@ -142,7 +142,7 @@ body {
     font-size: 12px; }
   body .active > .page-link, body .page-link.active {
     background-color: rgba(255, 255, 255, 0);
-    color: rgba(255, 255, 255, 0.642);
+    color: rgba(0, 0, 0, 0.35);
     border: none;
     font-size: 29px;
     font-family: Montserrat, sans-serif;
@@ -155,13 +155,12 @@ body {
     border: none;
     background-color: rgba(255, 255, 255, 0);
     color: black; }
+  body .page-item:hover {
+    background-color: none !important; }
 
 @media (max-width: 1025px) {
   body .content .top-nav .right {
-    width: 60%; }
-    body .content .top-nav .right a {
-      padding: 0px 10px;
-      font-size: 15px; }
+    width: 70%; }
   body .center-content {
     top: 200px; }
     body .center-content .center-detail h2 {
@@ -200,7 +199,8 @@ body {
     padding: 13px 0px; }
   body .center-content .center-detail p {
     font-size: 14px;
-    margin-bottom: 0px; }
+    margin-bottom: 0px;
+    height: 130px; }
   body .center-content .center-detail a {
     font-size: 15px;
     padding: 10px 25px; }
@@ -240,10 +240,45 @@ body {
 
 @media (max-width: 685px) {
   body .content .top-nav .right {
-    width: 73%; }
+    width: 250px; }
     body .content .top-nav .right a {
-      padding: 0px 5px;
-      font-size: 13px; }
+      display: none; }
+    body .content .top-nav .right .hamburger-icon {
+      display: block;
+      float: right;
+      margin: 0px 10px; }
+      body .content .top-nav .right .hamburger-icon i {
+        font-size: 20px; }
+  body .content .top-nav .right.responsive {
+    width: 150px;
+    background-color: white;
+    position: relative;
+    border-radius: 5px;
+    z-index: 1; }
+    body .content .top-nav .right.responsive a {
+      color: black;
+      display: block;
+      width: 200px;
+      padding: 15px 5px 15px 10px;
+      text-align: left; }
+    body .content .top-nav .right.responsive a:hover {
+      color: #6300cc; }
+    body .content .top-nav .right.responsive .hamburger-icon {
+      width: 35px;
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 0; }
+    body .content .top-nav .right.responsive .hamburger-icon:hover {
+      color: black; }
+  body .content .top-nav .top-nav.responsive .right .hamburger-icon {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0; }
+  body .content .top-nav .top-nav.responsive .right a {
+    display: block;
+    text-align: left; }
   body .center-content {
     top: 180px; }
     body .center-content .center-detail h2 {
@@ -275,31 +310,6 @@ body {
       margin: 0px 10px; }
       body .content .top-nav .right .hamburger-icon i {
         font-size: 20px; }
-  body .content .top-nav .right.responsive {
-    width: 150px;
-    background-color: rgba(68, 65, 65, 0.343);
-    position: relative;
-    border-radius: 5px;
-    z-index: 1; }
-    body .content .top-nav .right.responsive a {
-      display: block;
-      width: 200px;
-      padding: 15px 5px 15px 10px;
-      text-align: left; }
-    body .content .top-nav .right.responsive .hamburger-icon {
-      width: 35px;
-      display: block;
-      position: absolute;
-      right: 0;
-      top: 0; }
-  body .content .top-nav .top-nav.responsive .right .hamburger-icon {
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0; }
-  body .content .top-nav .top-nav.responsive .right a {
-    display: block;
-    text-align: left; }
   body .center-content {
     top: 230px; }
     body .center-content .center-detail h2 {
@@ -338,7 +348,7 @@ body {
             display: block;
             font-size: 14px; } }
 
-@media (max-width: 415px) {
+@media (max-width: 414px) {
   body .content .top-nav .left {
     padding: 20px; }
     body .content .top-nav .left img {
@@ -348,31 +358,6 @@ body {
     margin-top: 30px; }
     body .content .top-nav .right a {
       display: none; }
-  body .content .top-nav .right.responsive {
-    width: 150px;
-    background-color: rgba(68, 65, 65, 0.343);
-    position: relative;
-    border-radius: 5px;
-    z-index: 1; }
-    body .content .top-nav .right.responsive a {
-      display: block;
-      width: 200px;
-      padding: 15px 5px 15px 10px;
-      text-align: left; }
-    body .content .top-nav .right.responsive .hamburger-icon {
-      width: 35px;
-      display: block;
-      position: absolute;
-      right: 0;
-      top: 0; }
-  body .content .top-nav .top-nav.responsive .right .hamburger-icon {
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0; }
-  body .content .top-nav .top-nav.responsive .right a {
-    display: block;
-    text-align: left; }
   body .center-content {
     top: 230px; }
     body .center-content .center-detail h2 {
@@ -383,7 +368,8 @@ body {
       margin-left: 20px;
       font-size: 12px;
       margin-bottom: 0px;
-      width: 80%; }
+      width: 80%;
+      height: 130px; }
     body .center-content .center-detail a {
       font-size: 12px;
       padding: 8px 15px;
@@ -416,4 +402,8 @@ body {
     top: 200px; }
     body .center-content .center-detail p {
       height: 130px;
-      margin-bottom: 10px; } }
+      margin-bottom: 10px; }
+  body footer .foot .foot-one {
+    width: 100%; }
+    body footer .foot .foot-one .logo-info {
+      margin-left: 10px; } }
