--- a/styles/index.scss
+++ b/styles/index.scss
@@ -34,7 +34,7 @@ body{
             width: 100%;
 
             .left{
-                width: 15%;
+                width: 20%;
                 float: left;
                 padding: 30px;
 
@@ -207,7 +207,7 @@ body{
 
     .active > .page-link, .page-link.active{
         background-color: rgba(255, 255, 255, 0);
-        color: rgba(255, 255, 255, 0.642);
+        color: rgba(0, 0, 0, 0.35);
         border: none;
         font-size: 29px;
         font-family: $fontMonstserrat;
@@ -225,6 +225,9 @@ body{
         color: black;
         
     }
+    .page-item:hover{
+        background-color: none !important;
+    }
 }
 
 @media (max-width:1025px){
@@ -232,11 +235,7 @@ body{
         .content{
             .top-nav {
                 .right{
-                    width: 60%;
-                    a {
-                        padding: 0px 10px;
-                        font-size: 15px;
-                    }
+                    width: 70%;
                 }
             }
         }
@@ -316,6 +315,7 @@ body{
                 p{
                     font-size: 14px;
                     margin-bottom: 0px;
+                    height: 130px;
                 }
                 a{
                     font-size: 15px;
@@ -361,7 +361,7 @@ body{
 }
 
 @media (max-width:736px){
-    body{  
+    body{ 
         .center-content{
             top: 200px;
             .center-detail{
@@ -387,14 +387,66 @@ body{
         .content{
             .top-nav {
                 .right{
-                    width: 73%;
-                    a {
-                        padding: 0px 5px;
-                        font-size: 13px;
+                    width: 250px;
+
+                    a{
+                        display: none;
+                    }
+
+                    .hamburger-icon {
+                        display: block;
+                        float: right;
+                        margin:0px 10px;
+
+                        i{
+                            font-size: 20px;
+                        }
                     }
                 }
-            }
-        }
+                .right.responsive{
+                    width: 150px;
+                    background-color: rgb(255, 255, 255);
+                    position: relative;
+                    border-radius: 5px;
+                    z-index: 1;
+    
+                    a {
+                        color: black;
+                        display: block;
+                        width: 200px;
+                        padding: 15px 5px 15px 10px;
+                        text-align: left;
+                    }
+                    a:hover{
+                        color: #6300cc;
+                    }
+                    .hamburger-icon {
+                        width: 35px;
+                        display: block;
+                        position: absolute;
+                        right: 0;
+                        top: 0;
+                    }
+                    .hamburger-icon:hover {
+                        color: black;
+                    }
+                }
+                .top-nav.responsive{
+                    .right{
+                        .hamburger-icon {
+                        display: block;
+                        position: absolute;
+                            right: 0;
+                            top: 0;
+                        } 
+                        a{
+                            display: block;
+                            text-align: left;
+                        }
+                    }
+                }
+            }    
+        } 
         .center-content{
             top: 180px;
             .center-detail{
@@ -443,44 +495,8 @@ body{
                         float: right;
                         margin:0px 10px;
 
-
                         i{
                             font-size: 20px;
-                        }
-                    }
-                }
-                .right.responsive{
-                    width: 150px;
-                    background-color: rgba(68, 65, 65, 0.343);
-                    position: relative;
-                    border-radius: 5px;
-                    z-index: 1;
-    
-                    a {
-                        display: block;
-                        width: 200px;
-                        padding: 15px 5px 15px 10px;
-                        text-align: left;
-                    }
-                    .hamburger-icon {
-                        width: 35px;
-                        display: block;
-                        position: absolute;
-                        right: 0;
-                        top: 0;
-                    }
-                }
-                .top-nav.responsive{
-                    .right{
-                        .hamburger-icon {
-                        display: block;
-                        position: absolute;
-                            right: 0;
-                            top: 0;
-                        } 
-                        a{
-                            display: block;
-                            text-align: left;
                         }
                     }
                 }
@@ -547,7 +563,7 @@ body{
     }
 }
 
-@media (max-width:415px){
+@media (max-width:414px){
     body{
         .content{
             .top-nav {
@@ -567,41 +583,6 @@ body{
                         display: none;
                     }
                 }
-                .right.responsive{
-                    width: 150px;
-                    background-color: rgba(68, 65, 65, 0.343);
-                    position: relative;
-                    border-radius: 5px;
-                    z-index: 1;
-    
-                    a {
-                        display: block;
-                        width: 200px;
-                        padding: 15px 5px 15px 10px;
-                        text-align: left;
-                    }
-                    .hamburger-icon {
-                        width: 35px;
-                        display: block;
-                        position: absolute;
-                        right: 0;
-                        top: 0;
-                    }
-                }
-                .top-nav.responsive{
-                    .right{
-                        .hamburger-icon {
-                        display: block;
-                        position: absolute;
-                            right: 0;
-                            top: 0;
-                        } 
-                        a{
-                            display: block;
-                            text-align: left;
-                        }
-                    }
-                }
             }    
         }
 
@@ -618,6 +599,7 @@ body{
                     font-size: 12px;
                     margin-bottom: 0px;
                     width: 80%;
+                    height: 130px;
                 }
                 a{
                     font-size: 12px;
@@ -675,6 +657,16 @@ body{
                     margin-bottom: 10px;
                 }
                 
+            }
+        }
+        footer{
+            .foot{
+                .foot-one{
+                    width: 100%;
+                    .logo-info{
+                        margin-left: 10px;
+                    }
+                }
             }
         }
     }
