--- a/styles/sermon.css
+++ b/styles/sermon.css
@@ -1,6 +1,8 @@
-body .search-screen-img #book-image {
-  position: relative;
+body .search-screen-img {
   height: 100%; }
+  body .search-screen-img .book-image {
+    position: relative;
+    height: 100%; }
 
 body .content .top-nav .right a {
   color: #000000; }
@@ -51,10 +53,28 @@ body .sermon-div {
         font-weight: 300;
         font-size: 24px; }
   body .sermon-div .align-col {
-    padding: 10px;
-    width: 300px; }
+    padding: 10px; }
     body .sermon-div .align-col .filter-item {
       width: 100%; }
+      body .sermon-div .align-col .filter-item ul {
+        list-style-type: none;
+        margin: 0%;
+        padding: 0%; }
+        body .sermon-div .align-col .filter-item ul li {
+          width: 100%;
+          height: 40px; }
+          body .sermon-div .align-col .filter-item ul li input[type="checkbox"] {
+            background-color: #fff;
+            appearance: none;
+            margin: 0;
+            width: 20px;
+            height: 20px;
+            border: 2px solid black; }
+          body .sermon-div .align-col .filter-item ul li label {
+            font-family: Montserrat, sans-serif;
+            font-size: 14px;
+            font-weight: 300;
+            margin: 0px 10px; }
     body .sermon-div .align-col h4 {
       font-family: Montserrat, sans-serif;
       font-size: 16px;
@@ -90,39 +110,13 @@ body .sermon-div {
       padding: 0%; }
       body .sermon-div .align-col .search-sermon-pages li {
         margin: 10px 0px; }
-        body .sermon-div .align-col .search-sermon-pages li input[type="checkbox"] {
-          background-color: #fff;
-          appearance: none;
-          margin: 0;
-          width: 20px;
-          height: 20px;
-          border: 2px solid black; }
-        body .sermon-div .align-col .search-sermon-pages li input[type="checkbox"]::before {
-          width: 20px;
-          height: 20px;
-          transform: scale(0);
-          transition: 120ms transform ease-in-out;
-          box-shadow: inset 1em 1em var(--form-control-color);
-          transform-origin: bottom left;
-          clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%); }
-        body .sermon-div .align-col .search-sermon-pages li label {
-          font-family: Montserrat, sans-serif;
-          font-size: 14px;
-          font-weight: 300;
-          margin: 0px 10px; }
   body .sermon-div .align-right-col {
-    width: 860px;
-    padding: 0px;
-    margin-left: 30px; }
+    padding: 0px; }
     body .sermon-div .align-right-col p {
       margin: 0%;
       font-family: Montserrat, sans-serif;
       font-size: 20px;
       font-weight: 300; }
-    body .sermon-div .align-right-col .list-pagination {
-      margin-left: 15px; }
-      body .sermon-div .align-right-col .list-pagination .pagin-display {
-        padding: 0%; }
     body .sermon-div .align-right-col .task-list {
       background-color: #ffffff;
       border-radius: 5px;
@@ -168,16 +162,20 @@ body .sermon-div {
     top: 150px; }
     body .sermon-div h1 {
       font-size: 45px; }
+    body .sermon-div h2 {
+      font-size: 45px; }
     body .sermon-div .align-col {
-      width: 250px; }
+      width: 100%; }
       body .sermon-div .align-col h4 {
         font-size: 14px; }
       body .sermon-div .align-col .search-speaker {
         font-size: 14px; }
       body .sermon-div .align-col .sep-col-div {
         width: 500px; }
+      body .sermon-div .align-col .filter-item {
+        width: 50%; }
     body .sermon-div .align-right-col {
-      width: 690px; }
+      width: 100%; }
       body .sermon-div .align-right-col .task-list {
         height: 85px;
         padding: 17px; }
@@ -193,17 +191,25 @@ body .sermon-div {
             width: 22px; } }
 
 @media (max-width: 768px) {
+  body .search-screen-img {
+    height: 1400px; }
+    body .search-screen-img .book-image {
+      height: 1400px; }
   body .sermon-div {
     top: 150px; }
     body .sermon-div h1 {
       font-size: 40px; }
+    body .sermon-div h2 {
+      font-size: 40px; }
+    body .sermon-div .left-div .search-center-bar .search-bar {
+      width: 500px; }
+    body .sermon-div .left-div .search-center-bar p {
+      font-size: 20px; }
     body .sermon-div .align-col {
       width: 100%; }
       body .sermon-div .align-col .filter-item {
         width: 50%; }
       body .sermon-div .align-col h4 {
-        font-size: 14px; }
-      body .sermon-div .align-col .search-speaker {
         font-size: 14px; }
     body .sermon-div .align-right-col {
       width: 100%;
@@ -223,16 +229,40 @@ body .sermon-div {
             width: 22px; } }
 
 @media (max-width: 736px) {
-  body .book-image {
-    height: 1200px; }
+  body .search-screen-img {
+    height: 1600px; }
+    body .search-screen-img .book-image {
+      height: 1600px; }
   body .sermon-div h1 {
-    font-size: 40px; } }
+    font-size: 40px; }
+  body .sermon-div .left-div .search-center-bar i {
+    font-size: 24px; }
+  body .sermon-div .left-div .search-center-bar input {
+    font-size: 18px; } }
+
+@media (max-width: 685px) {
+  body .sermon-div h1 {
+    font-size: 35px; } }
 
 @media (max-width: 415px) {
-  body .book-image {
-    height: 1800px; }
+  body .search-screen-img {
+    height: 1900px; }
+    body .search-screen-img .book-image {
+      height: 1900px; }
+  body .content .top-nav .right.responsive {
+    background-color: #000000; }
+    body .content .top-nav .right.responsive a {
+      color: white; }
+    body .content .top-nav .right.responsive .hamburger-icon:hover {
+      color: white; }
   body .sermon-div h1 {
     font-size: 30px; }
+  body .sermon-div .left-div .search-center-bar input {
+    font-size: 20px; }
+  body .sermon-div .left-div .search-center-bar .search-bar {
+    width: 100%; }
+  body .sermon-div .left-div .search-center-bar p {
+    font-size: 16px; }
   body .sermon-div .align-col .filter-item {
     width: 100%; }
   body .sermon-div .align-right-col .task-list {
@@ -241,3 +271,18 @@ body .sermon-div {
       display: block; }
       body .sermon-div .align-right-col .task-list .task-title p {
         padding: 5px 0px; } }
+
+@media (max-width: 376px) {
+  body .search-screen-img {
+    height: 1900px; }
+    body .search-screen-img .book-image {
+      height: 1900px; }
+  body .sermon-div .left-div .search-center-bar .search-bar {
+    width: 100%; }
+    body .sermon-div .left-div .search-center-bar .search-bar i {
+      margin-left: 0px;
+      font-size: 18px; }
+    body .sermon-div .left-div .search-center-bar .search-bar input {
+      font-size: 18px; }
+  body .sermon-div .left-div .search-center-bar p {
+    font-size: 20px; } }
