--- a/styles/sermon.scss
+++ b/styles/sermon.scss
@@ -6,7 +6,8 @@ $fontOpenSans : open-sans, sans-serif;
 body{
 
     .search-screen-img{
-        #book-image{
+        height: 100%;
+        .book-image{
             position: relative;
             height: 100%;
         }
@@ -19,6 +20,7 @@ body{
                     color: #000000;
                 }
             }
+            
         }
     }
 
@@ -48,7 +50,6 @@ body{
 
             .search-center-bar{
                 margin-bottom: 30px;
-
 
                 .search-bar{
                     width: 650px;
@@ -85,12 +86,39 @@ body{
                 }
             }
         }
+
         .align-col{
             padding: 10px;
-            width: 300px;
 
             .filter-item{
                 width: 100%;
+
+                ul{
+                    list-style-type: none;
+                    margin: 0%;
+                    padding: 0%;
+
+                    li{
+                        width: 100%;
+                        height: 40px;
+
+                        input[type="checkbox"] {
+                            background-color: #fff;
+                            appearance: none;
+                            margin: 0;
+                            width: 20px;
+                            height: 20px;
+                            border: 2px solid black;
+                        }
+                        label{
+                            font-family: $fontMonstserrat;
+                            font-size: 14px;
+                            font-weight: 300;
+                            margin:0px 10px;
+                        }
+
+                    }
+                }
             }
 
             h4{
@@ -98,7 +126,6 @@ body{
                 font-size: 16px;
                 font-weight: bold;
                 margin: 10px 0px;
-
             }
 
             .search-title{
@@ -139,53 +166,16 @@ body{
 
                 li{
                     margin: 10px 0px;
-
-                    input[type="checkbox"] {
-                        background-color: #fff;
-                        appearance: none;
-                        margin: 0;
-                        width: 20px;
-                        height: 20px;
-                        border: 2px solid black;
-                    }
-                    input[type="checkbox"]::before {
-                        width: 20px;
-                        height: 20px;
-                        transform: scale(0);
-                        transition: 120ms transform ease-in-out;
-                        box-shadow: inset 1em 1em var(--form-control-color);
-                        transform-origin: bottom left;
-                        clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
-                    }
-                    label{
-    
-                        font-family: $fontMonstserrat;
-                        font-size: 14px;
-                        font-weight: 300;
-                        margin:0px 10px;
-                    }
                 }
             }
         }
         .align-right-col{
-            width: 860px;
             padding: 0px;
-            margin-left: 30px;
-
             p{
                 margin: 0%;
                 font-family: $fontMonstserrat;
                 font-size: 20px;
                 font-weight: 300;
-            }
-
-
-            .list-pagination{
-                margin-left: 15px;
-
-               .pagin-display{
-                padding: 0%;
-               }
             }
 
             .task-list{
@@ -194,7 +184,6 @@ body{
                 margin: 15px;
                 padding: 20px;
                 height: 101px;
-
 
                 .task-title{
                     display: flex;
@@ -244,7 +233,6 @@ body{
             display: flex;
             justify-content: center;
         }
-
     }
 }
 
@@ -256,9 +244,11 @@ body{
             h1{
                 font-size: 45px;
             }
+            h2{
+                font-size: 45px;
+            }
             .align-col{
-                width: 250px;
-
+                width: 100%;
                 h4{
                     font-size: 14px;
                 }
@@ -269,9 +259,15 @@ body{
                 .sep-col-div{
                     width: 500px;
                 }
+
+                .filter-item{
+                    width: 50%;
+                }
             }
+
             .align-right-col{
-                width: 690px;
+                width: 100%;
+
                 .task-list{
                     height: 85px;
                     padding: 17px;
@@ -280,10 +276,12 @@ body{
                         h5{
                             font-size: 17px;
                         }
+
                         p{
                             font-size: 14px;
                         }
                     }
+
                     .sermon-date{
                         font-size: 14px;
                     }
@@ -292,6 +290,7 @@ body{
 
                         .media-icon-div{
                             padding: 6px;
+
                             img{
                                 width: 22px;
                             }
@@ -305,26 +304,49 @@ body{
 
 @media (max-width:768px){
     body{
+        .search-screen-img{
+            height: 1400px;
+
+            .book-image{
+                height: 1400px;
+            }
+        }
+
         .sermon-div{
             top: 150px;
 
             h1{
                 font-size: 40px;
             }
+
+            h2{
+                font-size: 40px;
+            }
+
+            .left-div{
+                .search-center-bar{
+                    .search-bar{
+                        width: 500px;
+                    }
+                
+                    p{
+                        font-size: 20px;
+                    }
+                }
+            }
+
             .align-col{
                 width: 100%;
 
                 .filter-item{
                     width: 50%;
                 }
+
                 h4{
                     font-size: 14px;
                 }
-
-                .search-speaker{
-                    font-size: 14px;
-                }
             }
+
             .align-right-col{
                 width: 100%;
                 margin-left: 0%;
@@ -346,7 +368,6 @@ body{
                     }
 
                     .icon-media{
-
                         .media-icon-div{
                             padding: 6px;
                             img{
@@ -362,26 +383,90 @@ body{
 
 @media (max-width:736px){
     body{
-        .book-image{
-            height: 1200px;
+        .search-screen-img{
+            height: 1600px;
+            .book-image{
+                height: 1600px;
+            }
         }
+
         .sermon-div{
             h1{
                 font-size: 40px;
+            }
+            
+            .left-div{
+                .search-center-bar{
+                    i{
+                        font-size: 24px;
+                    }
+                    input{
+                        font-size: 18px;
+                    }
+                }
             }
         }
     }
 }
 
+@media (max-width:685px){
+    body{
+        
+        .sermon-div{
+            h1{
+                font-size: 35px;
+            }
+        }
+    }
+}
+
+
 @media (max-width:415px){
     body{
-        .book-image{
-            height: 1800px;
+
+        .search-screen-img{
+            height: 1900px;
+
+            .book-image{
+                height: 1900px;
+            }
+        }
+
+        .content{
+            .top-nav{
+                .right.responsive{
+                    background-color: #000000;
+                    
+                    a {
+                        color: rgb(255, 255, 255);
+                    }
+
+                    .hamburger-icon:hover {
+                        color: rgb(255, 255, 255);
+                    }
+                }
+            }
         }
 
         .sermon-div{
             h1{
                 font-size: 30px;
+            }
+
+            .left-div{
+                .search-center-bar{
+                    input{
+                        font-size: 20px;
+                    }
+
+                    .search-bar{
+                        width: 100%;
+                    }
+                
+                    p{
+                        font-size: 16px;
+                    }
+                }
             }
             .align-col{
                 .filter-item{
@@ -391,11 +476,48 @@ body{
             .align-right-col{
                 .task-list{
                     height: 160px;
+
                     .task-title{
                         display: block;
+                        
                         p{
                             padding: 5px 0px;
                         }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width:376px){
+    body{
+        .search-screen-img{
+            height: 1900px;
+
+            .book-image{
+                height: 1900px;
+            }
+        }
+
+        .sermon-div{
+            .left-div{
+                .search-center-bar{
+                    .search-bar{
+                        width: 100%;
+                        
+                        i{
+                            margin-left: 0px;
+                            font-size: 18px;
+                        }
+
+                        input{
+                            font-size: 18px;
+                        }
+                    }
+                
+                    p{
+                        font-size: 20px;
                     }
                 }
             }
