--- a/styles/sermon.scss
+++ b/styles/sermon.scss
@@ -27,20 +27,19 @@ body{
             text-align: center;
             font-size: 50px;
             font-weight: bold;
-            margin-bottom: 60px;
+            margin: 50px 0px;
         }
         h2{
             font-family: $fontMonstserrat;
             text-align: center;
             font-size: 50px;
             font-weight: bold;
-            margin-bottom: 20px;
+            margin: 50px 0px;
         }
 
         .left-div{
             width: 95%;
             margin: auto;
-            padding-top: 150px;
 
             .search-center-bar{
                 margin-bottom: 30px;
@@ -85,7 +84,7 @@ body{
             padding: 10px;
 
             .filter-item{
-                width: 100%;
+                width: 70%;
 
                 ul{
                     list-style-type: none;
@@ -128,8 +127,12 @@ body{
                 box-shadow: 0px 1px 10px #516AA4;
                 margin-bottom: 20px;
                 padding:8px 10px;
-                border-radius: 5px;
+                border-radius: 12px;
                 height: 44px;
+
+                i{
+                    margin-left: 10px;
+                }
 
                 input{
                     border: none;
@@ -147,7 +150,7 @@ body{
                 background-color: #ffffff;
                 box-shadow: 0px 1px 10px #516AA4;
                 padding:10px;
-                border-radius: 5px;
+                border-radius: 12px;
                 margin-bottom: 20px;
                 font-family: $fontMonstserrat;
                 font-weight: 300;
@@ -185,14 +188,16 @@ body{
                         font-family: $fontMonstserrat;
                         font-weight: 600;
                         font-size: 20px;
-                        width: 220px;
+                        width: 215px;
+                        border-right: 2px solid black;
                     }
     
                     p{
                         font-family: $fontMonstserrat;
                         font-weight: 500;
                         font-size: 16px;
-                        padding: 0px 5px;
+                        width: 200px;
+                        padding: 0px 10px;
                     }
                 }
                 .sermon-date{
